<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/AppTheme">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="24dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/location"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/colorText" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dip"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="10dp"
            android:background="@color/colorText" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="4dp"
                android:paddingEnd="8dp"
                android:paddingTop="4dp"/>
            <!--android:src="@drawable/ic_globe_primary_24dp" />-->

            <Switch
                android:id="@+id/enable_switch"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                android:text="@string/enable_geofences"
                android:textColor="@color/colorText"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="4dp"
                android:paddingEnd="8dp"
                android:paddingTop="4dp"/>
            <!--android:src="@drawable/ic_my_location_primary_24dp" />-->

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/location_permissions"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/colorText" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <CheckBox
                    android:id="@+id/location_permission_checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="0dp"
                    android:layout_marginEnd="8dp"/>
                    <!--android:onClick="onLocationPermissionClicked" />-->

            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="4dp"
                android:paddingEnd="8dp"
                android:paddingTop="4dp"/>
            <!--android:src="@drawable/ic_notifications_active_primary_24dp" />-->

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/ringer_permissions"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/colorText" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <CheckBox
                    android:id="@+id/ringer_permissions_checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="8dp"/>
                <!--android:onClick="onRingerPermissionsClicked"-->

            </RelativeLayout>
        </LinearLayout>


        <Button
            android:id="@+id/add_new_loc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@color/colorPrimary"
            android:text="@string/add_new_location"
            android:textAppearance="@style/TextAppearance.AppCompat.Button"
            android:textColor="@android:color/white" />
            <!--android:onClick="onAddPlaceButtonClicked"-->
    </LinearLayout>
</RelativeLayout>